Wed Nov  5 15:54:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_ctype.inl:
          Don't emulate isblank with isctype(_ISBLANK), isctype only checks
          for space, isblank should check space and tab

Wed Nov  5 13:20:00 UTC 2008  Simon Massey <sma at prismtech dot com>

        * tests/Process_Test.cpp:
          Attempt to correct for wide character ACE_TCHAR versions.

Wed Nov  5 09:36:00 UTC 2008  Simon Massey <sma at prismtech dot com>

        * tests/Process_Test.cpp:
          Removed Fuzz errors.

Wed Nov  5 08:49:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-lynxos.h:
          LynxOS5 has isblank

        * ace/config-aix-5.x.h:
          AIX lacks isctype

Wed Nov  5 04:04:57 UTC 2008  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * May the next president of the USA have the strength and courage
          to lead the USA wisely and help it to achieve its promise as a
          advocate for freedom and democracy.

Tue Nov  4 22:45:20 UTC 2008  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/SOCK_SEQPACK_Association.cpp: Added #ifdefs for
          ACE_USES_SOLARIS_SCTP.  Thanks to Steven Xie <steven dot xie at
          mpathix dot com> for contributing this.

Tue Nov  4 15:18:17 UTC 2008  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * tests/Process_Test.cpp: Added a new test that exercises the new
          handle inheritance mechanisms of ACE_Process.  Thanks to
          Christian Fromme <kaner at strace dot org> for contributing this
          test.

Tue Nov  4 14:15:07 UTC 2008  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * tests/tests.mpc:
        * tests/run_test.lst (Process_Test): Added the new test for the
          ACE_Process class.

Tue Nov  4 13:59:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/OS_Test.cpp:
          Added isblank test for space

        * ace/OS_NS_ctype.inl: